# docsmcp

./: .gitignore  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
apps/backend/: alembic.ini  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: pages.py  sources.py
apps/backend/app/core/: events.py  logging.py  settings.py
apps/backend/app/core/clients/: celery.py  rag.py
apps/backend/app/core/clients/llm/: factory.py
apps/backend/app/db/: postgres_pool.py
apps/backend/app/models/: __init__.py  base.py  job.py  page.py  source.py
apps/backend/app/repositories/: __init__.py  crawl_job_repo.py  page_repo.py  source_repo.py
apps/backend/app/schemas/: generic.py  source.py
apps/backend/app/services/: storage.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: ad58c2219fa5_intial_migration.py  b8baf0faa11d_update_enum_types.py  b9be152ace93_update_job_columns.py
apps/crawler/: pyproject.toml
apps/crawler/crawler/: celery_app.py
apps/crawler/crawler/pipeline/: config.py  crawler.py  js_detector.py
apps/crawler/crawler/tasks/: crawl.py
apps/crawler/crawler/url_frontier/: frontier.py
apps/crawler/crawler/utils/: url_utils.py
apps/frontend/: README.md  index.html  package-lock.json  package.json
apps/frontend/src/: App.jsx  api.js  styles.css  utils.js
apps/frontend/src/components/: AppShell.jsx  Icon.jsx  LogPanel.jsx  Sidebar.jsx  SourceCard.jsx  StatCard.jsx  Topbar.jsx
apps/frontend/src/data/: mockData.js
apps/frontend/src/screens/: AddSourceScreen.jsx  SourceDetailScreen.jsx  SourcesDashboard.jsx
apps/mcp_server/: pyproject.toml
apps/rag/: pyproject.toml
apps/rag/rag/: celery_app.py  main.py
apps/rag/rag/embedding/: base.py
apps/rag/rag/loaders/: __init__.py
apps/rag/rag/models/: documents.py
apps/rag/rag/splitters/: text_splitter.py
apps/rag/rag/store/: chroma_store.py
apps/rag/rag/tasks/: __init__.py  ingest_task.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  exceptions.py  main.py
backend/app/api/v1/: api.py  router.py
backend/app/api/v1/routes/: sources.py
backend/app/core/: __init__.py  events.py  logging.py  settings.py
backend/app/core/clients/llm/: client.py  models.py  providers.py
backend/app/db/: postgres_pool.py
backend/app/models/: __init__.py  base.py  job.py  page.py  source.py
backend/app/repositories/: __init__.py  page_repo.py
backend/app/respositories/: __init__.py  crawl_job_repo.py  page_repo.py  source_repo.py
backend/app/schemas/: source.py
backend/app/services/: __init__.py  storage.py
crawler/: celery_app.py  main.py  pyproject.toml
crawler/pipeline/: crawler.py  fetchers.py
crawler/tasks/: crawl.py
crawler/utils/: files.py
mcp_server/: pyproject.toml
rag/: README.md  celery_app.py  main.py  pyproject.toml
rag/embedding/: embedders.py
rag/loaders/: __init__.py
rag/pipeline/: ingestion.py
rag/splitters/: base.py  text_splitter.py
rag/store/: base_vector_store.py  chroma_store.py
rag/tasks/: ingest_task.py
volume/cache/: machine.json
worker/: celery_app.py  pyproject.toml
worker/db/: session.py
worker/pipeline/: config.py  crawler.py  fetchers.py  js_detector.py
worker/tasks/: __init__.py  crawl.py
