[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "backend",
  "beautifulsoup4>=4.14.3",
  "celery>=5.6.2",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "redis>=7.3.0",
]

[project.scripts]
worker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.uv.sources]
backend = { workspace = true }
