[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "docsmcp-common",
  "fastapi>=0.135.1",
  "gunicorn>=25.1.0",
  "orjson>=3.11.7",
  "python-multipart>=0.0.22",
  "sqlalchemy>=2.0.48",
  "uvicorn>=0.41.0",
]

[project.scripts]
backend = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
include = ["main.py"]

[tool.uv.sources]
docsmcp-common = { workspace = true }
