[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.13.5",
  "beautifulsoup4>=4.14.3",
  "celery>=5.6.2",
  "docsmcp-common",
  "docsmcp-persistence",
  "httpx>=0.28.1",
  "playwright>=1.55.0",
  "pydantic>=2.12.5",
  "redis>=7.3.0",
  "tldextract>=5.3.1",
]

[project.scripts]
crawler = "crawler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]

[tool.uv.sources]
backend = { workspace = true }
docsmcp-common = { workspace = true }
docsmcp-persistence = { workspace = true }
