[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "docsmcp-common",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
rag = "rag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.uv.sources]
docsmcp-common = { workspace = true }
